--- a/desafios_proyectos/desafios.ipynb
+++ b/desafios_proyectos/desafios.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "99517cc5",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "cb850b14",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "87db7a0c-eb51-43b3-8016-37958678faf5",
+       "ref": "ec4fafaa-16d3-4002-ab92-73b0ba7ec183",
        "rows": [
         [
          "0",
@@ -160,7 +160,7 @@
        "4  {'Data de venda': '10/06/2022', 'Cliente': ['M..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "7c685137",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "29d0ce0b-ab83-4818-a559-70d80dce3453",
+       "ref": "f28df2fd-2e3a-4c40-a4fd-7b352c77ceb7",
        "rows": [
         [
          "0",
@@ -331,7 +331,7 @@
        "4  [R$ 314,24, R$ 311,15, R$ 899,16, R$ 885,24]  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "e3dc5ae6",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "['Data de venda', 'Cliente', 'Valor da compra']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "11a6b575",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
          "type": "string"
         }
        ],
-       "ref": "1d876f29-8e44-406a-855d-87f34c880cf0",
+       "ref": "b8fdef9a-f2b3-4918-bb6a-b0fd72d08a65",
        "rows": [
         [
          "0",
@@ -519,7 +519,7 @@
        "4    07/06/2022  Isabely JOanes 738       R$ 825,31"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "6d0a76bd",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "19603dea",
    "metadata": {},
    "outputs": [
@@ -606,7 +606,7 @@
          "type": "string"
         }
        ],
-       "ref": "0b466c75-7c88-4343-86a2-a51979e9b402",
+       "ref": "daf42e22-ed3a-4d20-b62f-ef47cb4b8917",
        "rows": [
         [
          "0",
@@ -741,7 +741,7 @@
        "4  Isabely JOanes  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "4aec96fe",
    "metadata": {},
    "outputs": [
@@ -801,7 +801,7 @@
          "type": "string"
         }
        ],
-       "ref": "96f547bd-bd8e-4167-b2bd-a8575041e3ae",
+       "ref": "e8edae5d-44f3-44d2-892d-e4d5504b8cee",
        "rows": [
         [
          "0",
@@ -936,7 +936,7 @@
        "4  Isabely Joanes  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "8433a610",
    "metadata": {},
    "outputs": [],
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "6dc4a1da",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1032,7 @@
          "type": "string"
         }
        ],
-       "ref": "74a6b933-b7d7-4523-a92e-627b03f263e8",
+       "ref": "db5298ee-ce03-42d0-91e4-4f4841dedd14",
        "rows": [
         [
          "0",
@@ -1167,7 +1167,7 @@
        "4  Isabely Joanes  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4a80c62c",
    "metadata": {},
    "outputs": [],
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "556686af",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1257,7 @@
          "type": "string"
         }
        ],
-       "ref": "175ddd91-b28d-4e2f-b7dc-da10db8ffbc9",
+       "ref": "f2afbbcf-2a38-4fd2-a9c9-490ad7e972c4",
        "rows": [
         [
          "0",
@@ -1374,7 +1374,7 @@
        "4    2022-06-07           825.31         738  Isabely Joanes"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,6 +1384,330 @@
     "\n",
     "datos.info()\n",
     "datos.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef062194",
+   "metadata": {},
+   "source": [
+    "### Formatea la columna 'Data de venda' al formato 'd'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78248b7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Data de venda",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "e26505db-df1c-43f1-b01c-fcff140b8b18",
+       "rows": [
+        [
+         "0",
+         "06"
+        ],
+        [
+         "1",
+         "06"
+        ],
+        [
+         "2",
+         "06"
+        ],
+        [
+         "3",
+         "06"
+        ],
+        [
+         "4",
+         "07"
+        ],
+        [
+         "5",
+         "07"
+        ],
+        [
+         "6",
+         "07"
+        ],
+        [
+         "7",
+         "07"
+        ],
+        [
+         "8",
+         "08"
+        ],
+        [
+         "9",
+         "08"
+        ],
+        [
+         "10",
+         "08"
+        ],
+        [
+         "11",
+         "08"
+        ],
+        [
+         "12",
+         "09"
+        ],
+        [
+         "13",
+         "09"
+        ],
+        [
+         "14",
+         "09"
+        ],
+        [
+         "15",
+         "09"
+        ],
+        [
+         "16",
+         "10"
+        ],
+        [
+         "17",
+         "10"
+        ],
+        [
+         "18",
+         "10"
+        ],
+        [
+         "19",
+         "10"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 20
+       }
+      },
+      "text/plain": [
+       "0     06\n",
+       "1     06\n",
+       "2     06\n",
+       "3     06\n",
+       "4     07\n",
+       "5     07\n",
+       "6     07\n",
+       "7     07\n",
+       "8     08\n",
+       "9     08\n",
+       "10    08\n",
+       "11    08\n",
+       "12    09\n",
+       "13    09\n",
+       "14    09\n",
+       "15    09\n",
+       "16    10\n",
+       "17    10\n",
+       "18    10\n",
+       "19    10\n",
+       "Name: Data de venda, dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos['Data de venda'].dt.strftime('%d')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fbe289a",
+   "metadata": {},
+   "source": [
+    "### Agrupa por d y suma la cantidad de clientes que compraron ese dia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d1bc5e5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "Data de venda",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Nombre_cliente",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "fe503ed3-91f4-4c82-9009-8fb9913434ca",
+       "rows": [
+        [
+         "06",
+         "Ana LuciaDiego ArmandiuDiego ArmandiuDiego Armandiu"
+        ],
+        [
+         "07",
+         "Isabely JoanesIsabely JoanesIsabely JoanesIsabely Joanes"
+        ],
+        [
+         "08",
+         "Isabely JoanesJoão GabrielJulya MeirelesJulya Meireles"
+        ],
+        [
+         "09",
+         "Julya MeirelesMaria JuliaMaria JuliaMaria Julia"
+        ],
+        [
+         "10",
+         "Maria JuliaPedro PascoPaulo CastroThiago Fritzz"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 5
+       }
+      },
+      "text/plain": [
+       "Data de venda\n",
+       "06    Ana LuciaDiego ArmandiuDiego ArmandiuDiego Arm...\n",
+       "07    Isabely JoanesIsabely JoanesIsabely JoanesIsab...\n",
+       "08    Isabely JoanesJoão GabrielJulya MeirelesJulya ...\n",
+       "09      Julya MeirelesMaria JuliaMaria JuliaMaria Julia\n",
+       "10      Maria JuliaPedro PascoPaulo CastroThiago Fritzz\n",
+       "Name: Nombre_cliente, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dia_de_compra = datos.groupby(datos['Data de venda'].dt.strftime('%d'))['Nombre_cliente'].sum()\n",
+    "dia_de_compra"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d5e5044",
+   "metadata": {},
+   "source": [
+    "### Calcula el total recaudado en compras por cada cliente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "defe33a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "Nombre_cliente",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Valor da compra",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "38d9ed8e-968e-4860-a2cd-8015623ab124",
+       "rows": [
+        [
+         "Ana Lucia",
+         "836.5"
+        ],
+        [
+         "Diego Armandiu",
+         "1478.47"
+        ],
+        [
+         "Isabely Joanes",
+         "2329.3"
+        ],
+        [
+         "João Gabriel",
+         "386.34"
+        ],
+        [
+         "Julya Meireles",
+         "1643.74"
+        ],
+        [
+         "Maria Julia",
+         "2086.65"
+        ],
+        [
+         "Paulo Castro",
+         "899.16"
+        ],
+        [
+         "Pedro Pasco",
+         "311.15"
+        ],
+        [
+         "Thiago Fritzz",
+         "885.24"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 9
+       }
+      },
+      "text/plain": [
+       "Nombre_cliente\n",
+       "Ana Lucia          836.50\n",
+       "Diego Armandiu    1478.47\n",
+       "Isabely Joanes    2329.30\n",
+       "João Gabriel       386.34\n",
+       "Julya Meireles    1643.74\n",
+       "Maria Julia       2086.65\n",
+       "Paulo Castro       899.16\n",
+       "Pedro Pasco        311.15\n",
+       "Thiago Fritzz      885.24\n",
+       "Name: Valor da compra, dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_compras = datos.groupby(['Nombre_cliente'])['Valor da compra'].sum()\n",
+    "total_compras"
    ]
   },
   {
@@ -1410,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "f7a02d11",
    "metadata": {},
    "outputs": [],
@@ -1428,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "12b206a8",
    "metadata": {},
    "outputs": [
@@ -1447,7 +1771,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "567455e8-944b-4c9c-94b7-423c115de631",
+       "ref": "b301a101-9f6f-4612-911a-4a6a95dc8708",
        "rows": [
         [
          "0",
@@ -1531,7 +1855,7 @@
        "4  {'apartamento': 'C301 (blocoAP)', 'datas_combi..."
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "52955b3c",
    "metadata": {},
    "outputs": [
@@ -1585,7 +1909,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "0d35d1cc-533c-4370-9a28-e0ed121d5ee8",
+       "ref": "79ca53b3-469d-4544-8810-ff9c0345acab",
        "rows": [
         [
          "0",
@@ -1709,7 +2033,7 @@
        "4  [$ 1400,0 reais, $ 2900,0 reais]  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "49f33b30",
    "metadata": {},
    "outputs": [
@@ -1763,7 +2087,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "9822b63b-b1ee-4e9e-8224-d4f84ebc53b9",
+       "ref": "46950330-4e57-4eda-a0fc-1e7c5d707a2d",
        "rows": [
         [
          "0",
@@ -2047,7 +2371,7 @@
        "14  [$ 2400,0 reais, $ 2200,0 reais]  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
